<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="in.geekvalet.sevame.ui.Profile">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="250dp">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/placeholder"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />
            </RelativeLayout>

        <!--Name text title-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:text="@string/name"
                android:textStyle="bold"/>
        </RelativeLayout>
        <!--Name text Title ends here-->

        <!--Separator Line-->
        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#CC3300"
            android:layout_gravity="bottom"/>
        <!--Separator Line Ends Here-->

        <!--Name text-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ViewSwitcher
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/switcher_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:clickable="true"
                    android:layout_marginTop="7dp"
                    android:id="@+id/name_text_v"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17dp"
                    />
                <EditText
                    android:id="@+id/name_edit_v"
                    android:layout_marginTop="7dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17dp"
                    android:hint="@string/name_hint">
                </EditText>
            </ViewSwitcher>
        </RelativeLayout>
        <!--Name text ends Here-->
        <!--Name Ends here-->

        <!--Phone starts here-->
        <!--Phone title-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:text="@string/phone_title"
                android:textStyle="bold"/>
        </RelativeLayout>
        <!--Phone Title ends here-->

        <!--Separator Line-->
        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#CC3300"
            android:layout_gravity="bottom"/>
        <!--Separator Line Ends Here-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ViewSwitcher
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/switcher_phone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/phone_text_v"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:textSize="17dp"

                    />
                <EditText
                    android:id="@+id/phone_edit_v"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17dp"
                    android:hint="@string/phone_hint"
                    android:layout_marginTop="7dp">
                </EditText>
            </ViewSwitcher>
            </RelativeLayout>
        <!--Phone text here-->
        <!--Phone Ends here-->


        <!--service starts-->
        <!--Service Title starts-->
        <!--Phone title-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:text="@string/service_title"
                android:textStyle="bold"/>
        </RelativeLayout>
        <!--Service Title ends here-->

        <!--Separator Line-->
        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#CC3300"
            android:layout_gravity="bottom"/>
        <!--Separator Line Ends Here-->
        <!--Service Edit starts Here-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ViewSwitcher
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/switcher_service"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/service_text_v"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:textSize="17dp"
                    />
                <EditText
                    android:id="@+id/service_edit_v"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:textSize="17dp"
                    android:hint="@string/service_hint"
                    >
                </EditText>
            </ViewSwitcher>
        </RelativeLayout>

        <!--Service Text Ends here-->
        <!--Service Ends here-->

        <!--Experience Starts here-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:text="@string/experience_title"
                android:textStyle="bold"/>
        </RelativeLayout>
        <!--Experience Title ends here-->

        <!--Separator Line-->
        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#CC3300"
            android:layout_gravity="bottom"/>
        <!--Separator Line Ends Here-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--Experience text starts here-->
            <ViewSwitcher
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/switcher_experience"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:clickable="true"
                    android:id="@+id/experience_text_v"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:textSize="17dp"
                    />
                <EditText
                    android:id="@+id/experience_edit_v"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:textSize="17dp"
                    android:hint="@string/experience_hint"
                    >
                </EditText>
            </ViewSwitcher>


        </RelativeLayout>

        <!--Experience text ends here-->
        <!--Experience Ends Here-->

        <!--Address Starts here -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:text="@string/address"
                android:textStyle="bold"/>
        </RelativeLayout>
        <!--Address Title ends here-->

        <!--Separator Line-->
        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#CC3300"
            android:layout_gravity="bottom"/>

        <!--Address 1 Starts here-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ViewSwitcher
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/switcher_address_1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/address_1_text_v"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:textSize="17dp"
                    />
                <EditText
                    android:id="@+id/address_1_edit_v"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:textSize="17dp"
                    android:hint="@string/address_hint"
                    >
                </EditText>
            </ViewSwitcher>
         </RelativeLayout>
        <!--Address1 Ends here-->
        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/darker_gray"
            android:layout_gravity="bottom"/>

        <!--Address2  Starts Here-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ViewSwitcher
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/switcher_address_2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/address_2_text_v"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:textSize="17dp"
                    />
                <EditText
                    android:id="@+id/address_2_edit_v"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:textSize="17dp"
                    >
                </EditText>
            </ViewSwitcher>
            </RelativeLayout>

        <!--Address 2 Ends Here-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <!--Buttons partitions starts here-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2">

            <!--Sevame Call me-->
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center">
                <Button
                    android:id="@+id/call_seva_me_button"
                    android:layout_width="130dp"
                    android:layout_height="40dp"
                    android:text="@string/call_seva_me_title"/>
            </RelativeLayout>
            <!--Sevame Call me ends here-->
            <!--SevaMe Edit-->
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center">

                <Button
                    android:id="@+id/edit_button"
                    android:layout_width="130dp"
                    android:layout_height="40dp"
                    android:text="@string/edit_title"/>
            </RelativeLayout>

        </LinearLayout>
        </RelativeLayout>

        <!--Buttons End here-->

        </LinearLayout>
    </ScrollView>


</FrameLayout>
